deployment: cicd: SecurityConfig: adjust error handling and allow any headers